Spruce up Timeline UI (#58)
The `activity`, `activity-group`, and `date-marker` UIs couple together
to create, what's unofficially referred to as, The Timeline UI. These
components have been neglected for a long time... until now!

--- a/admin/config/locales/en.yml
+++ b/admin/config/locales/en.yml
@@ -115,6 +115,9 @@ en:
         shipping_service_destroy_html: removed the %{name} shipping service
         shipping_service_update_html: updated %{fields} on the %{name} shipping service
         show:
+          activity:
+            one: 1 Activity
+            other: "%{count} Activities"
           activity_by: activity by
           admin_activity: Admin Activity
           main_dashboard: Main dashboard
