Surface Asset alt text and behavior within Content Blocks (#95)
In an effort to make the recent updates to alt text overridding in
Content Blocks a bit clearer, alt text is now being output:

- On the content assets index view
- In the title for a content asset summary

Default alt text has been removed from the Content block DSL, which
makes the default text come directly from the Asset itself.

The help text displayed on Asset Content Blocks always appears now,
better explaining the behavior of this feature.

--- a/admin/config/locales/en.yml
+++ b/admin/config/locales/en.yml
@@ -765,7 +765,7 @@ en:
           clear_asset: Clear asset
           name_missing: "(none)"
           select_an_asset: Select an asset
-          alt_text_note_html: "Leave alt text blank to default to the asset's alt text: <strong>%{alt}</strong>"
+          alt_text_note: Leave alt text blank to default to the asset's alt text
         category:
           select_placeholder: Choose a category...
         flash_messages:
