Prevent adding more than 15 segments
This is being done for performance reasons. We can increase this amount
later after we get comfortable running this in production.

No changelog

Closes #88

--- a/admin/config/locales/en.yml
+++ b/admin/config/locales/en.yml
@@ -3541,6 +3541,7 @@ en:
           life_cycle: Life Cycle
           custom: Custom
           sparkline_title: Based on orders over the last three months
+          max_segments: For performance reasons, Workarea doesn't allow more than 15 segments.
         insights:
           page_title: Insights on %{segment}
           orders: Orders
