--- a/core/config/locales/en.yml
+++ b/core/config/locales/en.yml
@@ -70,6 +70,7 @@ en:
         must_be_unique: must be unique
         not_star_query: "cannot be '*'"
         undo_unpublished_release: cannot be set when Publish Date is blank
+        max_allowed_segments: You cannot have more than 15 total segments in Workarea.
     facets:
       price_range:
         over: 'Over %{price}'
