--- a/core/config/locales/en.yml
+++ b/core/config/locales/en.yml
@@ -71,6 +71,7 @@ en:
         not_star_query: "cannot be '*'"
         undo_unpublished_release: cannot be set when Publish Date is blank
         max_allowed_segments: You cannot have more than 15 total segments in Workarea.
+        unsupported_segmentation: aren't supported for pricing.
     facets:
       price_range:
         over: 'Over %{price}'
