Clean up Segments UI Front-End (#150)
* Refactor WORKAREA.select module
* Refactor WORKAREA.toggleElements
* Refactor WORKAREA.activeBySegmentTooltips
* Stop page jitter when selecting segments

No changelog

Closes #142

--- a/admin/config/locales/en.yml
+++ b/admin/config/locales/en.yml
@@ -3567,8 +3567,8 @@ en:
           active_by_segment: Active by Segment
           by_segment:
             zero: by segment
-            one: "only for %{names}"
-            other: "only for %{names}"
+            one: "only for %{name}"
+            other: "only for %{name} and %{more_count} more..."
           description_html: 'If you select segments here this will only show for visitors in one of those segments.'
           only_for: Only for
           select_segments: Select segments...
