--- a/admin/config/locales/en.yml
+++ b/admin/config/locales/en.yml
@@ -2,6 +2,7 @@ en:
   workarea:
     admin:
       actions:
+        back: Back
         cancel: Cancel
         delete: Delete
         delete_confirmation: Are you sure you want to delete?
