--- a/admin/config/locales/en.yml
+++ b/admin/config/locales/en.yml
@@ -3647,6 +3647,7 @@ en:
           system_pages: System Pages
           tax_categories: Tax Categories
           taxonomy: Taxonomy
+          timeline: Timeline
           todays_orders: Today's Orders
           todays_signups: Today's Signups
           transactional_emails: Transactional Emails
