--- a/admin/config/locales/en.yml
+++ b/admin/config/locales/en.yml
@@ -3558,6 +3558,11 @@ en:
               other: "Has visited <strong>%{count}</strong> times"
           tags:
             description_html: "Tagged with any of <strong>%{tags}</strong>"
+      segmentables:
+        index:
+          title: Content Active for "%{name}"
+          no_content: There's no content setup specifically for this segment.
+          no_content_instructions_html: Throughout the admin, you can setup personalized experiences for this segment. Anywhere you see an <strong>Active</strong> field, you can click the "by segment" link next to it to make that only for a selection of segments. For content blocks, you can do this in the "Display" tab on the right in the block editing screen.
       segments:
         cards:
           attributes:
@@ -3566,6 +3571,13 @@ en:
           rules:
             header: Rules
             button: View Rules
+          segmentables:
+            button: View
+            content_html:
+              zero: There's <strong>no content</strong> setup specifically for this segment.
+              one: "There's <strong>1</strong> piece of content setup specifically for this segment:"
+              other: "There are <strong>%{count}</strong> pieces of content setup specifically for this segment:"
+            header: Content
           insights:
             header: Insights
             button: View Insights
