--- a/admin/config/locales/en.yml
+++ b/admin/config/locales/en.yml
@@ -2376,6 +2376,7 @@ en:
           publishes_on_and_has_no_changes: "%{release_name} publishes on %{release_publish_date} and has no changes"
           variant: variant
         avatar_title: Avatar for %{name}
+        browse_storefront_as_guest: Browse the Storefront as a Guest
         close_primary_menu: Close Primary Menu
         current_page: Current Page
         help: Help
