[DOCS] Fix href and src values
Restoring the old section ID logic fixed the majority of broken links to
sections, but it broke all links to sections that were written _after_
the migration to the current toolchain.

Fix those href values to use the "old" values to make all well, now and
moving foward.

While doing this, also fix href and src values in general. The current
toolchain requires all href and src values to be root-relative (begin
with "/") for them to be portable (continue working if the article in
which they appear is moved).

WORKAREA-63

No changelog

--- a/docs/source/articles/i18n.html.md
+++ b/docs/source/articles/i18n.html.md
@@ -6,19 +6,19 @@ excerpt: Internationalization/localization features in Workarea allow for transl
 
 # I18n
 
-Internationalization/localization features in Workarea allow for [translation/customization of static content](translate-or-customize-static-content.html) (including [message content](translate-or-customize-message-content.html) and [JavaScript content](translate-javascript-content.html)) and [translation of administrable content](translate-administrable-content.html).
+Internationalization/localization features in Workarea allow for [translation/customization of static content](/articles/translate-or-customize-static-content.html) (including [message content](/articles/translate-or-customize-message-content.html) and [JavaScript content](/articles/translate-javascript-content.html)) and [translation of administrable content](/articles/translate-administrable-content.html).
 
 **Note:** Internationalization/localization in Workarea relies heavily on [Rails I18n](http://guides.rubyonrails.org/i18n.html) and [Mongoid Localization](https://docs.mongodb.org/ecosystem/tutorial/ruby-mongoid-tutorial/#localized-fields). The preceding links provide excellent explanations of those features, so they are recommended reading.
 
 ## Customizing Text
 
-Rails I18n features are useful even if your app has only a single locale. Use I18n to customize static text strings, such as [the content of success, failure, and warning messages](translate-or-customize-message-content.html).
+Rails I18n features are useful even if your app has only a single locale. Use I18n to customize static text strings, such as [the content of success, failure, and warning messages](/articles/translate-or-customize-message-content.html).
 
 ## Translating Text
 
-Of course, your app may also use multiple locales to provide [static content translations](translate-or-customize-static-content.html) and [translation of administrable content](translate-administrable-content.html).
+Of course, your app may also use multiple locales to provide [static content translations](/articles/translate-or-customize-static-content.html) and [translation of administrable content](/articles/translate-administrable-content.html).
 
-To use multiple locales, start by [configuring locales](configure-locales.html).
+To use multiple locales, start by [configuring locales](/articles/configure-locales.html).
 
 ## Determining the Current Locale
 
