Add a Shortcut for editing the Footer to Admin
WORKAREA-145

--- a/admin/config/locales/en.yml
+++ b/admin/config/locales/en.yml
@@ -2421,6 +2421,7 @@ en:
         visit_storefront: Visit the Storefront
         your_account_on_the_storefront: Your Account on the Storefront
         edit_the_home_page: Edit the Home Page
+        edit_the_footer: Edit the Footer
         articles: Articles
         community_forum: Community Forum
       navigation_menus:
