Expose shipping service code in admin create and edit screens
WORKAREA-190

--- a/admin/config/locales/en.yml
+++ b/admin/config/locales/en.yml
@@ -1646,6 +1646,7 @@ en:
         searches: Searches
         send_account_creation_email: Notify Them by Email
         service: Service
+        service_code: Service Code
         services_file: Services File
         shipping: Shipping
         shipping_service_id: Shipping Service
